<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:text="About Us"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/loginImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dog_bg"
                android:scaleType="centerCrop"
                android:paddingBottom="45dp"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:text="Contact Us"
        android:textStyle="bold"
        >

    </Button>

    <ScrollView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/visionCard"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/vision"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="Our Vision"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:textColor="#6542A8" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vision"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/animalRescueCard"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/animalRescue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="Animal Rescue"
                        android:textColor="#6542A8"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/animal_rescue"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rehabilitationCard"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="Welfare and Rehabilitation:"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:textColor="#6542A8" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rehabilitation"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>


</LinearLayout>